RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/40_0007/40_merged.txt
/home/dimpling/AutoSpec/out/40_0007/40_merged.c:54:3: error: unterminated comment
   54 |   /*@;
      |   ^
